fixed forms and homepage styles. looks good on mobile.

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -8,12 +8,7 @@ body { font-family: sans-serif; }
 /* ---- grid ---- */
 
 .grid {
-    background: white;
     width: 80%;
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     margin: auto;
 }
 
