--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -19,6 +19,19 @@ button {
     outline:none;
 }
 
+.blur {
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+}
+
+.flex-container {
+    display: -webkit-flex;
+    display: flex;
+}
+
 #discoverHeading {
     color: white;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #D15FEE, 0 0 30px #D15FEE, 0 0 40px  #D15FEE, 0 0 55px  #D15FEE, 0 0 75px #D15FEE;
@@ -170,6 +183,7 @@ span {
 .dropdown-menu {
     padding-bottom: 0px;
     border: #11b6c1;
+    text-align: center !important;
 }
 
 .wrapper {
